Sat Jan 03 19:04:11 EST 2004  Paul Duncan <pabs@pablotron.org>,

  * removed extraneous XFlush
  * switched to global file list length (avoid recalculating it
    constantly)

Tue May 27 14:55:02 BST 2003  Tom Gilbert <tom@linuxbrit.co.uk>

  * Released 1.2.6

Fri May 23 14:23:49 BST 2003  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fix debian bug #193964. segv on 'm' followed by cursor movement.

Fri Apr 11 11:46:55 BST 2003  Tom Gilbert <tom@linuxbrit.co.uk>

  * Patch from Eric Dorland <eric.dorland@mail.mcgill.ca>
  * Set icon name as well as title on change.

Fri Apr 11 11:34:41 BST 2003  Tom Gilbert <tom@linuxbrit.co.uk>

  * Patch from Rami Lehti <rammer@vapaa.dc.inet.fi>
  * New option not to jump to start of filelist when it's re-sorted.

Tue Mar 18 19:07:17 GMT 2003  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fix bug reloading http images that fail to download on subsequent
    attempts.

Sun Feb 23 16:23:00 GMT 2003  Tom Gilbert <tom@linuxbrit.co.uk>

  * Released 1.2.5, for small bugfix below.

Sun Feb 23 16:19:15 GMT 2003  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fix http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=169911
  * Start of IPC code, not used yet.

Mon Dec 23 01:19:17 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Experimental speedup for caption editing. Caches the bg pixmap for the
    image (which doesn't change when you're just editing a caption) so only
    the overlay needs to be re-rendered on each change to the caption.
    Definitely makes a difference when editing captions on a large, fullscreen
    image.

Sun Dec 22 22:59:31 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Tweak event handling - don't nuke queued keyevents when we're accepting
    input for caption entry.

Sun Dec 22 13:50:16 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fixed wrapping for long lines with no spaces
  * Caption editing, also requested by David Blackman <david@whizziwig.com>
    Hit 'c', edit caption, enter to confirm the changes or Escape to revert.